--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -1,156 +1,315 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre Nosotros - La Tienda de Lola</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <meta name="description" content="La tienda de Lola es creada por Guadalupe en un 14 de diciembre del 2014 como una forma de expresar su estilo y su pasión por la decoración, el local se encuentra en el corazón del puerto de frutos donde se diseñan, restauran y crean muebles y objetos de decoración para el hogar.">
-    <meta name="keywords" content="LA TIENDA DE LOLA, TIENDA LOLA, LOLA TIENDA, MUEBLES, DECORACION, DECORACIÓN, HOGAR, DISEÑO, SERVILLETEROS, PORTA VELAS, MATES, ALMOHADONES, BACHAS DE CERAMICA, MESA DE COMEDOR, JUEGOS DE CAMASTROS, INTERIOR, EXTERIOR">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/main.css" />
+    <meta
+      name="description"
+      content="La tienda de Lola es creada por Guadalupe en un 14 de diciembre del 2014 como una forma de expresar su estilo y su pasión por la decoración, el local se encuentra en el corazón del puerto de frutos donde se diseñan, restauran y crean muebles y objetos de decoración para el hogar."
+    />
+    <meta
+      name="keywords"
+      content="LA TIENDA DE LOLA, TIENDA LOLA, LOLA TIENDA, MUEBLES, DECORACION, DECORACIÓN, HOGAR, DISEÑO, SERVILLETEROS, PORTA VELAS, MATES, ALMOHADONES, BACHAS DE CERAMICA, MESA DE COMEDOR, JUEGOS DE CAMASTROS, INTERIOR, EXTERIOR"
+    />
+  </head>
+  <body>
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container-fluid">
-            <!-- LOGO -->
-            <a class="navbar-brand" href="../index.html">
-                <img src="../images/laTiendaDeLolaLogo.png" class="navbar-brand__image" alt="Icono de La Tienda de Lola">
-            </a>
-            <!-- COLLAPSED NAV BUTTON -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- NAV LINKS -->
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" href="tiendaOnline.html">Tienda Online</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" href="comoComprar.html">Como Comprar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" href="contacto.html">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" href="sobreNosotros.html">Sobre Nosotros</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- SEARCH BAR -->
-            <div class="searchbar d-none d-lg-block me-3">
-                <input class="search_input" type="text" name="" placeholder="Buscar">
-                <a href="#" class="search_icon">
-                    <img src="../images/search.svg" alt="Search Icon">
-                </a>
-            </div>
+      <div class="container-fluid">
+        <!-- LOGO -->
+        <a class="navbar-brand" href="../index.html">
+          <img
+            src="../images/laTiendaDeLolaLogo.png"
+            class="navbar-brand__image"
+            alt="Icono de La Tienda de Lola"
+          />
+        </a>
+        <!-- COLLAPSED NAV BUTTON -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- NAV LINKS -->
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link navbar-link__style"
+                aria-current="page"
+                href="../index.html"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar-link__style" href="tiendaOnline.html"
+                >Tienda Online</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar-link__style" href="comoComprar.html"
+                >Como Comprar</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar-link__style" href="contacto.html"
+                >Contacto</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar-link__style" href="sobreNosotros.html"
+                >Sobre Nosotros</a
+              >
+            </li>
+          </ul>
         </div>
+        <!-- SEARCH BAR -->
+        <div class="searchbar d-none d-lg-block me-3">
+          <input
+            class="search_input"
+            type="text"
+            name=""
+            placeholder="Buscar"
+          />
+          <a href="#" class="search_icon">
+            <img src="../images/search.svg" alt="Search Icon" />
+          </a>
+        </div>
+      </div>
     </nav>
     <!-- NAVBAR ENDS -->
 
-        <!-- ABOUTS US -->
-        <div class="container aboutUs">
-            <div class="row d-flex justify-content-center mt-5 mb-5">
-                <div class="col-12">
-                    <!-- TITLE -->
-                    <h2 class="aboutUs__title text-center mt-4">SOBRE NOSOTROS</h2>
-                </div>
-                <div class="col-8 aboutUs__Text mt-4">
-                    <!-- BODY -->
-                    <p>La tienda de Lola es creada por Guadalupe en un 14 de diciembre del 2014 como una forma de expresar su estilo y su pasión por la decoración, el local se encuentra en el corazón del puerto de frutos donde se diseñan, restauran y crean muebles y objetos de decoración para el hogar.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="aboutUs__title text-center mt-4">
-                        <!-- TITLE -->
-                        APARICIONES EN REVISTAS
-                    </h2>
-                    <!-- CARAS -->
-                    <iframe src="https://caras.perfil.com/noticias/caras-like/la-tienda-de-lola-decoracion-diseno-y-tendencia.phtml" style="border:0px #ffffff none;" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" height="500px" width="100%" allowfullscreen class="pt-4"></iframe>
-                    <!-- LA NACION -->
-                    <iframe src="https://www.lanacion.com.ar/revista-living/buen-clima-exitosa-union-de-tonos-oscuros-y-estilo-rustico-sin-resignar-calidez-nid11042021/" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" height="500px" width="100%" allowfullscreen class="pt-5"></iframe>
-                </div>
-            </div>
+    <!-- ABOUTS US -->
+    <div class="container aboutUs">
+      <div class="row d-flex justify-content-center mt-5 mb-5">
+        <div class="col-12">
+          <!-- TITLE -->
+          <h2 class="aboutUs__title text-center mt-4">SOBRE NOSOTROS</h2>
         </div>
+        <div class="col-8 aboutUs__Text mt-4">
+          <!-- BODY -->
+          <p>
+            La tienda de Lola es creada por Guadalupe en un 14 de diciembre del
+            2014 como una forma de expresar su estilo y su pasión por la
+            decoración, el local se encuentra en el corazón del puerto de frutos
+            donde se diseñan, restauran y crean muebles y objetos de decoración
+            para el hogar.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h2 class="aboutUs__title text-center mt-4">
+            <!-- TITLE -->
+            APARICIONES EN REVISTAS
+          </h2>
+          <!-- CARAS -->
+          <iframe
+            src="https://caras.perfil.com/noticias/caras-like/la-tienda-de-lola-decoracion-diseno-y-tendencia.phtml"
+            style="border: 0px #ffffff none"
+            scrolling="yes"
+            frameborder="0"
+            marginheight="0px"
+            marginwidth="0px"
+            height="500px"
+            width="100%"
+            allowfullscreen
+            class="pt-4"
+          ></iframe>
+          <!-- LA NACION -->
+          <iframe
+            src="https://www.lanacion.com.ar/revista-living/buen-clima-exitosa-union-de-tonos-oscuros-y-estilo-rustico-sin-resignar-calidez-nid11042021/"
+            style="border: 0px #ffffff none"
+            name="myiFrame"
+            scrolling="yes"
+            frameborder="0"
+            marginheight="0px"
+            marginwidth="0px"
+            height="500px"
+            width="100%"
+            allowfullscreen
+            class="pt-5"
+          ></iframe>
+        </div>
+      </div>
+    </div>
 
     <!-- FOOTER DESKTOP START -->
     <footer class="footer container-fluid mt-4 d-none d-sm-block">
-        <div class="row d-flex">
-            <div class="footer__brand col-6 col-sm-2 align-self-center">
-            <!-- NAV BRAND -->
-            <a href="../index.html">
-                <img src="../images/laTiendaDeLolaLogo.png" class="footer-brand__image img-fluid p-4 grow" alt="Logo de La Tienda de Lola">
-            </a>
+      <div class="row d-flex">
+        <div class="footer__brand col-6 col-sm-2 align-self-center">
+          <!-- NAV BRAND -->
+          <a href="../index.html">
+            <img
+              src="../images/laTiendaDeLolaLogo.png"
+              class="footer-brand__image img-fluid p-4 grow"
+              alt="Logo de La Tienda de Lola"
+            />
+          </a>
         </div>
         <!-- FOOTER INFORMATION -->
-        <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start">
-            <p>Sarmiento 37</p>
-            <p>Puerto de Frutos, Tigre</p>
-            <p>+52 9 11 2780-2449</p>
-            <p>Ventasweb@latiendadelola.com</p>
+        <div
+          class="
+            footer__information
+            col-6 col-sm-5
+            align-self-center
+            justify-content-start
+          "
+        >
+          <p>Sarmiento 37</p>
+          <p>Puerto de Frutos, Tigre</p>
+          <p>+52 9 11 2780-2449</p>
+          <p>Ventasweb@latiendadelola.com</p>
         </div>
         <!-- FOOTER MAP -->
         <div class="footer__map col-6 col-sm-4 align-self-center">
-            <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
+          <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar"
+            width="322"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            class="w-100"
+          ></iframe>
         </div>
         <!-- FOOTER BUTTONS -->
-        <div class="footer__buttons col-6 col-sm-1 d-flex flex-column justify-content-center align-self-center">
-            <a href="https://www.instagram.com/la.tiendadelola/" target="_blank" class="grow">
-            <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-100" alt="Icono de instagram">
-            </a>
-            <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank" class="grow">
-            <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-100" alt="Icono de Facebook">
-            </a>
+        <div
+          class="
+            footer__buttons
+            col-6 col-sm-1
+            d-flex
+            flex-column
+            justify-content-center
+            align-self-center
+          "
+        >
+          <a
+            href="https://www.instagram.com/la.tiendadelola/"
+            target="_blank"
+            class="grow"
+          >
+            <img
+              src="../images/instagramIcon.png"
+              class="footer-buttons__instagram w-75 grow"
+              alt="Icono de instagram"
+            />
+          </a>
+          <a
+            href="https://www.facebook.com/latiendadelolatigre/"
+            target="_blank"
+            class="grow"
+          >
+            <img
+              src="../images/facebookIcon.png"
+              class="footer-buttons__facebook w-75 grow"
+              alt="Icono de Facebook"
+            />
+          </a>
         </div>
-        </div>
+      </div>
     </footer>
     <!-- FOOTER DESKTOP ENDS -->
 
     <!-- FOOTER MOBILE START -->
     <footer class="footer d-block d-sm-none container-fluid mt-4">
-        <div class="row">
+      <div class="row">
         <div class="col-6 pt-2">
-            <div class="footer__brand col-6 col-sm-2 align-self-center">
-                <!-- FOOTER BRAND -->
-                <a href="../index.html">
-                    <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
-                </a>
-            </div>
-            <!-- FOOTER BUTTONS -->
-            <div class="footer__buttons col-6 col-sm-1 d-flex flex-row justify-content-center align-self-center ps-3">
-            <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
-                <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-75" alt="Icono de instagram">
+          <div class="footer__brand col-6 col-sm-2 align-self-center">
+            <!-- FOOTER BRAND -->
+            <a href="../index.html">
+              <img
+                src="../images/laTiendaDeLolaLogo.png"
+                class="footer-brand__image img-fluid p-2"
+                alt="Logo de La Tienda de Lola"
+              />
             </a>
-            <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank">
-                <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-75" alt="Icono de Facebook">
+          </div>
+          <!-- FOOTER BUTTONS -->
+          <div
+            class="
+              footer__buttons
+              col-6 col-sm-1
+              d-flex
+              flex-row
+              justify-content-center
+              align-self-center
+              ps-3
+            "
+          >
+            <a
+              href="https://www.instagram.com/la.tiendadelola/"
+              target="_blank"
+            >
+              <img
+                src="../images/instagramIcon.png"
+                class="footer-buttons__instagram w-75"
+                alt="Icono de instagram"
+              />
             </a>
-            </div>
-            <!-- FOOTER INFORMATION -->
-            <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start ps-3 pt-4">
+            <a
+              href="https://www.facebook.com/latiendadelolatigre/"
+              target="_blank"
+            >
+              <img
+                src="../images/facebookIcon.png"
+                class="footer-buttons__facebook w-75"
+                alt="Icono de Facebook"
+              />
+            </a>
+          </div>
+          <!-- FOOTER INFORMATION -->
+          <div
+            class="
+              footer__information
+              col-6 col-sm-5
+              align-self-center
+              justify-content-start
+              ps-3
+              pt-4
+            "
+          >
             <p>Sarmiento 37</p>
             <p>Puerto de Frutos, Tigre</p>
             <p>+52 9 11 2780-2449</p>
             <p>Ventasweb@latiendadelola.com</p>
-            </div>
+          </div>
         </div>
         <div class="col-6 pt-2">
-            <!-- FOOTER MAP -->
-            <div class="footer__map col-6 col-sm-4 align-self-center">
+          <!-- FOOTER MAP -->
+          <div class="footer__map col-6 col-sm-4 align-self-center">
             <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" width="170px" height="220px"></iframe>
-            </div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              width="170px"
+              height="220px"
+            ></iframe>
+          </div>
         </div>
-        </div>    
+      </div>
     </footer>
     <!-- FOOTER MOBILE END -->
 
     <!-- BOOTSTRAP SCRIPT -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
